  the following:
    - The \jaql command starts a Jaql session
    - The --jaql when starting jsqsh, automatically starts a session
    - When in a jaql session, \go or the command terminator (";" by default)
      executes the current statement through the Jaql interpreter.
    - The variables "jaql_prompt", "jaql_indent", "jaql_jars", "jaql_path",
      and "jaql_style" can be used to affect the behavior of the jaql shell
      (these are all documented under "\help jaql").
    - Jsqsh options --jaql-path and --jaql-jars have been added. Use of
      these options implies --jaql.
    - Tab completion will complete any global Jaql variable name.  
    - There are three display styles that apply to Jaql: "json", "lines",
      and "discard".
* The command terminator may now end a jsqsh command. For example, the
  following are now legal:
        1> quit;
  or
        1> \echo hello how are you;
        hello how are you
* Added new SQL display style "json". 
* The behavior of setting $style is slightly different now, and is documented
  in the help for style. The support styles vary based upon the session type
  (e.g. a JDBC session vs. a Jaql session). Setting a SQL style with no
  session started, or a SQL session started sets it globally for all session.
  Jaql styles can only be applied during a jaql session, and only sets the
  value locally for the jaql session.
* Upgraded to a customized version of jline-2.7-SNAPSHOT. JLine is a pure
  java line editing library, similar to readline. This version is my own
  version, which is available here:
      https://github.com/scgray/jline2
  but should hopefully make it into the mainline soon. It adds
  support for most of the basic "vi" command set.  The only big-ticket
  missing items are undo/redo support and multi-command support 
  (like "dw" to delete-to-word, "d$" to delete to end of line, etc.).
* Added $editing_mode to allow you to set the editing keymap. Currently